@@ -5,6 +5,7 @@
 * 2014-04-29 - thorben.betten@open-xchange.com
 
  - Fix for bug 32211: Removed usage of removed String constructor in JSON bundle + Proper reflection-wise look-up of "extendedProvider" field in Java8
+ - Fix for bug 31842: Provide human-readable quota information
 
 * 2014-04-28 - martin.herfurth@open-xchange.com
 
